--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "autoconfig"
 version = "0.1.1"
 description = "Simple AutoConfig: env extraction + unified config loader (env/json/yaml/toml)"
-authors = [
-    { name = "Ahmed Gamal", email = "kazanova.star.sh@gmail.com" }
-]
+authors = [{name = "Ahmed Gamal", email = "kazanova.star.sh@gmail.com"}]
 readme = "README.md"
-license = { text = "MIT" }
+license = {text = "MIT"}
 requires-python = ">=3.9"
-
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -36,14 +33,5 @@ autoconfig = "autoconfig.cli:main"
 yaml = ["PyYAML>=5.4"]
 toml = ["tomli>=2.0.1"]
 env = ["python-dotenv>=0.19.0"]
-all = [
-    "PyYAML>=5.4",
-    "tomli>=2.0.1",
-    "python-dotenv>=0.19.0"
-]
-dev = [
-    "pytest>=7.0",
-    "PyYAML",
-    "tomli>=2.0.1",
-    "python-dotenv"
-]
+all = ["PyYAML>=5.4", "tomli>=2.0.1", "python-dotenv>=0.19.0"]
+dev = ["pytest>=7.0", "PyYAML", "tomli>=2.0.1", "python-dotenv"]
