--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "autoconfig"
+name = "configx"
 version = "0.1.1"
 description = "Simple AutoConfig: env extraction + unified config loader (env/json/yaml/toml)"
 authors = [{name = "Ahmed Gamal", email = "kazanova.star.sh@gmail.com"}]
